# curse_work_v2

./: .gitignore  README.md  Vacancies.json  index.html  main.py  pyproject.toml
src/: file_seve.py  job_processing.py  request_class.py  support_function.py
tests/: test_file_seve.py
